{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 5,
  "lineage": "c80cb7e0-a90d-1798-a84c-78f4d040d07d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sg_test_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:565102900668:vpc/vpc-00106678c2374ffde",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.0.0.0/16",
            "default_network_acl_id": "acl-034ca49b35aa7c12b",
            "default_route_table_id": "rtb-05fcf334d3181050c",
            "default_security_group_id": "sg-061588b7b2adca03c",
            "dhcp_options_id": "dopt-0dbada08eb0e57db8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00106678c2374ffde",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05fcf334d3181050c",
            "owner_id": "565102900668",
            "tags": {
              "Name": "sg_test_vpc"
            },
            "tags_all": {
              "Name": "sg_test_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.sg_test",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:565102900668:security-group/sg-0055e7ab5d671a019",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0055e7ab5d671a019",
            "ingress": [],
            "name": "sg_test",
            "name_prefix": "",
            "owner_id": "565102900668",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_test"
            },
            "timeouts": null,
            "vpc_id": "vpc-00106678c2374ffde"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sg_test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.test_sg_egress",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1338876952",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0055e7ab5d671a019",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sg_test_vpc",
            "module.sg_test.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.test_sg_ingress[\"test-2\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "test-2",
            "from_port": 0,
            "id": "sgrule-2434889382",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0055e7ab5d671a019",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sg_test_vpc",
            "module.sg_test.aws_security_group.this"
          ]
        }
      ]
    }
  ]
}